# ghostexec

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  README.md  __init__.py  client.py  conftest.py  graders.py  inference.py  models.py  notebook_setup.py  openenv.yaml  pyproject.toml  validate-submission.sh
docs/submission_results/: README.md
environment-innovation/: README.md
notebooks/: ghostexec_unsloth_grpo_hf_api.ipynb
scenarios/: dinner_disaster.json  monday_morning.json  phase2_core.json  schema_drift_test.json  vip_meltdown.json  vip_meltdown_drift.json
scripts/: __init__.py  eval_reward_ablation.py  export_submission_plots.py  generate_committed_submission_plots.py  http_endpoint_smoke.py  plot_training_report.py  run_live_api_dead_500.py  smoke_grpo_variance.py  train_sft_then_grpo.py
server/: Dockerfile  __init__.py  app.py  ghostexec_environment.py  reward.py
tests/: test_api_reward_dead_500.py  test_complete_integration.py  test_docker_build.py  test_env.py  test_grpo_rollout_env_isolation.py  test_live_server_exhaustive.py  test_openenv_grpo_rollout.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_random_baseline.py  test_reward_dead_suite.py  test_submission_plots_committed.py  test_training_constrained_decode.py  test_training_constrained_patching.py  test_training_eval_harness.py  test_training_llm_action_parse.py  test_training_multiturn_reward.py  test_training_rejection_sft.py  test_training_rewards_shaping.py  test_training_scenarios_sampler.py
training/: HF_BLOG_DRAFT.md  __init__.py  constrained_decode.py  eval_harness.py  ghostexec_colab.ipynb  ghostexec_unsloth_grpo_colab.ipynb  grpo_ghostexec_reward.py  llm_action_parse.py  multiturn_reward.py  openenv_grpo_rollout.py  random_baseline.py  rejection_sft.py  scenarios_sampler.py  train.py  unsloth_inductor_shim.py
